# ai-builders-hub

./: CONTRIBUTING.md  LICENSE  README.md
projects/Autogen-Agent-Chat-Planner/: .env.example  README.md  pyproject.toml  streamlit_app.py
projects/Data Leakage Prevention for Time-Series ML/: README.md  main.py  nyc311_top_features.csv  pyproject.toml
projects/DeepMCPAgent/: .env.example  README.md  pyproject.toml  requirements.txt
projects/DeepMCPAgent/examples/: use_files_agent.py
projects/DeepMCPAgent/examples/servers/: files_server.py
projects/Document_Analysis_using_RAG/: README.md  main.py  pyproject.toml
projects/Graph-RAG-Implementation/: Architecture.md  README.md  knowledge_graph.html  query_subgraph.html  requirements.txt  simple_graph_rag.py
projects/crawl-for-ai/: README.md  main.py  pyproject.toml
projects/crawl4ai-with-machine-learning/: README.md  deepcrawl_zero_shot_results.json  main.py  pyproject.toml  requirements.txt
projects/electricity-spike-detecting-ml-model-demo/: README.md  app.py  predict_and_act.py  pyproject.toml  train_with_eda.py  xgboost_model.joblib
projects/gemma4/: README.md  exp1_context_test.py  exp1_results.json  exp2_efficiency_test.py  exp2_results.json  visualize_results.py
projects/gpt-oss-reasoning-os/: README.md  main.py  pyproject.toml
projects/linkedin-post-similarity-engine/: README.md  main.py  pyproject.toml
projects/llm-deepteam-eval/: .env.example  .gitignore  README.md  main.py  pyproject.toml
projects/local-rag-leann/: README.md  main.py  pyproject.toml
projects/longterm-memory-langmem/: README.md  main.py  pyproject.toml
projects/mcp-with-fastapi/: README.md  main.py  pyproject.toml
projects/mem0-with-gemini-llm-tutorial/: .env.example  README.md  dev.Dockerfile  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
projects/movie-recommendation-ml-model-building/: Dockerfile  README.md  pyproject.toml  requirements.txt
projects/movie-recommendation-ml-model-building/app/: api.py  app.py
projects/movie-recommendation-ml-model-building/notebooks/: 01_prepare_data.ipynb  movie_recommender_walkthrough_demo.ipynb  setup_paths.py
projects/movie-recommendation-ml-model-building/src/: __init__.py  data_prep.py  model_knn.py  recommend.py  utils.py
projects/ocr-with-gemma/: README.md  main.py  pyproject.toml
projects/online-machine-learning-with-river/: README.md  main.py  pyproject.toml  requirements.txt
projects/paper2code-gemini-implementation/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
projects/paper2code-gemini-implementation/app/: api.py
projects/paper2code-gemini-implementation/data/: wine5_cleaned.json
projects/paper2code-gemini-implementation/src/: app.py  gemini_adapter.py  main.py  requirements.txt
projects/parlant-healthcare-agent/: README.md  main.py  pyproject.toml
projects/picarx-edgeflow/: .gitignore  README.md  consumer_to_minio.py  docker-compose.yml  pi_inference.py  pi_producer.py
projects/role-aware-context-routing/: README.md  analytics_harness.py  enhanced_rcr_router.py  env.example.env  flexible_autogen_rcr_integration.py  flexible_llm_provider.py  pyproject.toml  rcr_analytics.py  visualization_suite.py
projects/subtitles-with-assemblyai/: .env.example  README.md  main.py  pyproject.toml
tutorials/ml-fundamentals/: genre_encoder.pkl  ml_fundamentals_workshop.ipynb  movie_rating_model.pkl
(+19 files in other folders)
