[project]
name = "deepmcpagents"
version = "0.1.0"
description = "DeepMCPAgent examples: run a local FastMCP server and a BYOM agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "deepmcpagent[deep,examples]>=0.3.0",
  "langchain-openai>=0.1.0",
  "langchain-google-genai>=2.0.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.1",
  "fastmcp>=2.12.2",
]
