[project]
name = "crawl4ai-with-machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.7.4",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "tqdm>=4.66.0",
]
