[project]
name = "demos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "recommend>=0.2.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "streamlit>=1.49.1",
]
